[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "Multimodal-RAG"  
version = "0.0.1"        
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "ipykernel",
    "scikit-learn",
    "transformers[torch]",
    "requests",
    
]